tests/NormalTests/paczka1/fuzzy1/18864785.err
Error in line 2: 08TjQNKCL S406 61,7
Error in line 14: zyLGpChd3g A115 81,5
Error in line 25: HuEmm A97 36,4
Error in line 27: HuEmm S406 93,3
Error in line 36: HuEmm A147 53,5
